crates/swc_ecma_parser/tests/test262-error-references/fail/a793dd27762c8ec8.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/a793dd27762c8ec8.js:1:5
  |
1 | for(([a]) in 0);
  |     ^^^^^

